Rename the file, add an additional comment.

--- a/aoml_project.ipynb
+++ b/aoml_project.ipynb
@@ -1749,6 +1749,9 @@
     }
    ],
    "source": [
+    "# Change the loc argument here to slice the grouped dataframe for category_002, 003, .... so on\n",
+    "\n",
+    "\n",
     "category_access.loc['Category_001'].plot(figsize=(12, 10))"
    ]
   },
