Demarcate where the LSTM model begins in the code.

--- a/aoml_project.ipynb
+++ b/aoml_project.ipynb
@@ -5064,6 +5064,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# LSTM model starts here\n",
+    "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from keras.models import Sequential\n",
